--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -295,3 +295,11 @@
 .widget-mpris-subtitle {
   font-size: 1.1rem;
 }
+
+/* Volume widget */
+.widget-volume {
+  background-color: rgba(189, 147, 249, 0.2);
+  padding: 2px 2px 2px 10px;
+  border-radius: 10px;
+  font-size: 14px;
+}
