--- a/.config/ags/scss/_bar.scss
+++ b/.config/ags/scss/_bar.scss
@@ -22,6 +22,11 @@ $bar_ws_width_focus_active: 2.045rem;
     min-height: 1.364rem;
 }
 
+.bar-bg-nothing {
+    background-color: $layer0;
+    min-height: 2px;
+}
+
 .bar-bg-focus-batterylow {
     background-color: mix($layer0, $errorContainer, 80%);
 }
@@ -92,7 +97,14 @@ $bar_ws_width_focus_active: 2.045rem;
     min-width: 18.341rem;
 }
 
+
+.bar-ws-container {
+    transition: 700ms cubic-bezier(0.1, 1, 0, 1);
+}
+
 .bar-ws {
+    font-size: 1.02rem;
+    font-weight: 600;
     min-width: $bar_ws_width;
     color: $workspaceOnLayer1Inactive;
 }
@@ -152,7 +164,7 @@ $bar_ws_width_focus_active: 2.045rem;
 
 .bar-batt-circprog {
     @include fluent_decel_long;
-    min-width: 0.068rem; // line width
+    min-width: 0.136rem; // line width
     min-height: 1.636rem;
     padding: 0rem;
     background-color: $battLayer2;
@@ -181,7 +193,7 @@ $bar_ws_width_focus_active: 2.045rem;
 
 .bar-ram-circprog {
     @include fluent_decel_long;
-    min-width: 0.068rem; // line width
+    min-width: 0.136rem; // line width
     min-height: 1.636rem;
     padding: 0rem;
     background-color: $ramLayer2;
@@ -203,7 +215,7 @@ $bar_ws_width_focus_active: 2.045rem;
 
 .bar-swap-circprog {
     @include fluent_decel_long;
-    min-width: 0.068rem; // line width
+    min-width: 0.136rem; // line width
     min-height: 1.636rem;
     padding: 0rem;
     background-color: $swapLayer2;
@@ -225,7 +237,7 @@ $bar_ws_width_focus_active: 2.045rem;
 
 .bar-cpu-circprog {
     @include fluent_decel_long;
-    min-width: 0.068rem; // line width
+    min-width: 0.136rem; // line width
     min-height: 1.636rem;
     padding: 0rem;
     background-color: $cpuLayer2;
@@ -246,7 +258,7 @@ $bar_ws_width_focus_active: 2.045rem;
 
 .bar-music-circprog {
     @include fluent_decel_long;
-    min-width: 0.068rem; // line width
+    min-width: 0.136rem; // line width
     min-height: 1.636rem;
     padding: 0rem;
     background-color: $musicLayer2;
